<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiperefresh_recycler"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/search_bar"
    android:scrollbars="vertical"
    android:background="#F6E2E2">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".upload_doctor">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

  </LinearLayout>

  <EditText
      android:id="@+id/task_desc"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_margin="30dp"
      android:background="#D3E9EC"
      android:padding="50dp"
      android:text="Appointment title"
      android:textColor="#000"
      android:textSize="12sp">

  </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginRight="20dp">


        <Button
            android:id="@+id/btn_calender_stop_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:padding="10dp"
            android:text="SET DATE"
            android:textColor="#fff">

        </Button>

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000">


        </EditText>


      </LinearLayout>


      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <Button
            android:id="@+id/btn_calender_stop_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:paddingRight="10dp"
            android:text="SET TIME"
            android:textColor="#fff">

        </Button>

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000">


        </EditText>


      </LinearLayout>


    </LinearLayout>

  <TextView
      android:id="@+id/textView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Appoint To" />

  <Spinner
      android:id="@+id/employee"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  <Button
      android:id="@+id/create_task"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      android:background="#000"
      android:text="SET APPOINTMENT"
      android:textColor="#fff">

  </Button>


</LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>