...
            android:background="#91C7F1"
            android:padding="10dp"
            android:text="CREATE HOSPITAL"
            android:textColor="#0C0C0C" />

        <Button
            android:id="@+id/employeeLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#CACFEF"
            android:padding="10dp"
            android:text="USER"
            android:textColor="#090909" />

    </LinearLayout>



...
